--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <html>
   <head>
     <title>Epic Battles</title>
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"></link>
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap-theme.min.css"></link>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
   </head>
   
   <body>
