--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,20 @@
   </head>
   
   <body>
-    <h1>Epic Battles!</h1>
+    <div class="container">
+      <h1>Epic Battles!</h1>
+      <form class="form-inline" role="form" action="/battles" method="post">
+        <div class="form-group">
+          <label class="sr-only" for="combatant1">Combatant 1</label>
+          <input type="text" class="formcontrol" id="combatant1" name="combatant1" placeholder="Godzilla" />
+          VS
+          <label class="sr-only" for="combatant2">Combatant 2</label>
+          <input type="text" class="formcontrol" id="combatant2" name="combatant2" placeholder="Chuck Norris" />
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-danger">WHO WILL WIN?</button>
+        </div>
+      </form>
+    </div>
   </body>
 </html>
