--- a/public/index.html
+++ b/public/index.html
@@ -14,18 +14,20 @@
             type: "POST",
             url: "/battles",
             data: $form.serialize(),
-            success: function(responseData){
-              console.log("response: "+ responseData);
-            },
-            error: function(err){
-              console.log(err);
-            },
+            success: successCallback,
+            error: errorCallback,
             dataType: "text"
           });
           event.preventDefault();
         });
+        function postResult(message) {
+          $('#battle-result').text(message);
+        };
         function successCallback(responseData) {
-          console.log("response: "+ responseData);
+          postResult(responseData);
+        };
+        function errorCallback(err){
+          postResult('There was a problem, so the battle has been postponed.');
         };
       });
     </script> 
@@ -34,18 +36,27 @@
   <body>
     <div class="container">
       <h1>Epic Battles!</h1>
-      <form id="battleForm" class="form-inline" role="form" action="/battles" method="post">
+      <form id="battleForm" class="form" role="form" action="/battles" method="post">
         <div class="form-group">
           <label class="sr-only" for="combatant1">Combatant 1</label>
           <input type="text" class="formcontrol" id="combatant1" name="combatant1" placeholder="Godzilla" />
           VS
           <label class="sr-only" for="combatant2">Combatant 2</label>
           <input type="text" class="formcontrol" id="combatant2" name="combatant2" placeholder="Chuck Norris" />
+          <a id="add-a-combatant">add a combatant</a>
+          <div style="visibility: hidden"> 
+            VS
+            <label class="sr-only" for="combatant3">Combatant 3</label>
+            <input type="text" class="formcontrol" id="combatant3" name="combatant3" placeholder="Aquaman" />
+          </div>
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-danger">WHO WILL WIN?</button>
         </div>
       </form>
+      <div class="lead">
+        <span id="battle-result"></span>
+      </div>
     </div>
   </body>
 </html>
