--- a/public/index.html
+++ b/public/index.html
@@ -5,34 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/css/bootstrap-theme.min.css"></link>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
-    <script type="text/javascript"> 
-      $(document).ready(function() {
-        $("#battleForm").submit(function(event) {
-          var $form = $(this); 
-          console.log("form contents: "+ $form.serialize());
-          $.ajax({
-            type: "POST",
-            url: "/battles",
-            data: $form.serialize(),
-            success: successCallback,
-            error: errorCallback,
-            dataType: "text"
-          });
-          event.preventDefault();
-        });
-        function successCallback(responseData) {
-          $("#battle-result").text(responseData); 
-        };
-        function errorCallback(error) {
-          $("#battle-result").text("Sorry, there was an error.");
-        };
-        $("#add-another").click(function(event) {
-          $(this).hide();
-          $(".combatant3").show();
-          event.preventDefault();
-        })
-      });
-    </script> 
+    <script type="text/javascript" src="/js/epic-battles.js"></script> 
   </head>
   
   <body>
