--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,11 @@
     <link rel="stylesheet" type="text/css" href="/css/bootstrap-theme.min.css"></link>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/epic-battles.js"></script> 
+    <script type="text/javascript" src="/js/coffee-script-compiler.js"></script>
+    <script type="text/javascript" src="/js/epic-battles.js"></script>
+    <script type="text/coffeescript">
+    console.log "coffeescript is working"
+    </script> 
   </head>
   
   <body>
