--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/coffee-script-compiler.js"></script>
+    <script type="text/coffeescript" src="/js/epic-battles.coffee"></script>
     <script type="text/javascript" src="/js/epic-battles.js"></script>
     <script type="text/coffeescript">
     console.log "coffeescript is working"
